test/libsolidity/syntaxTests/parsing/multiple_modifier_arg_trailing_comma.sol
contract test {
    modifier modTest(uint a, uint b,) { _; }
    function(uint a) {}
}
// ----
// ParserError 7591: (51-52): Unexpected trailing comma in parameter list.
